@@ -16,6 +16,7 @@
   * Updated jQuery Mobile to 1.0b1 (and adjusted some parts of TMP to work with this new version properly)
   * Updated underscore.js to 1.1.6
   * Removed the VERSION file, since we maintain the version in m.js -> M.version
+  * Refactored alert and confirm dialog to have position dynamically calculated => always in center of the screen, even if page is scrolled. Semi-transparent background now has full page size.
 
 ** Version 0.5 - Date 03.06.2011 **
 
